# clinix_consultas

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/css/: style.css
