[project]
name = "clinix-consultas"
version = "1.0.0"
description = "Backend Python do sistema de agendamento"
authors = [
    {name = "Ruan, ruantmelon@icloud.com"}
]
license = {text = "Propietary"}
readme = "README.md"
requires-python = ">3.11.0,<=3.11.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
